2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/multiboot.c (grub_cmd_module): Fix target address.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Replace UINT_TO_PTR and PTR_TO_UINT with explicit grub_addr_t casts.

	* include/grub/types.h (UINT_TO_PTR): Removed. All users switched to
	grub_addr_t casts.
	(PTR_TO_UINT64): Likewise.
	(PTR_TO_UINT32): Likewise.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Decrease the higher limit
	because of stack.
	* util/grub-setup.c (setup): Don't add redundancy past the higher load
	limit.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/gui_label.c (label_paint): Handle the case
	text_width > available width a bit more gracefully.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsdXX.c (grub_freebsd_load_elfmodule): Fix
	current address calculation.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (decode_block): Allocate on heap and not
	stack.
	(encode_block): Likewise.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/startup_raw.S: Clear direction flag for
	certainety.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/startup_raw.S: Move realmode routines to
	non-RS part to avoid RS messing with GDT.
	* include/grub/offsets.h (GRUB_KERNEL_I386_PC_NO_REED_SOLOMON_PART):
	Increase to suit in realmode routines.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/realmode.S: Increase alignment.
	* grub-core/boot/i386/pc/startup_raw.S: Likewise.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (init_powx): Set gf_powx_inv[0] just to
	be deterministic.
	(syndroms): Compute 0 syndrom.
	(rs_recover): Use 0 syndrom.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>
